--- a/Index.html
+++ b/Index.html
@@ -5,19 +5,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+
+
+
     <title>prueba</title>
 </head>
 
 <body>
-
+    <!--Creacion del menu-->
     <nav>
         <ul>
-            <li><img src="iconos/cel.png" alt="" width="15px" height="12px">Contacto</li>
-            <li><img src="iconos/amor.png" alt="" width="15px" height="12px">Like</li>
-            <li><img src="iconos/muchos.png" alt="" width="15px" height="12px">Servicios</li>
-            <li><img src="iconos/logi.png" alt="" width="15px" height="12px">Contacto</li>
+            <li><img src="iconos/cel.png" alt="" width="15px" height="12px"><a>Contacto</a></li>
+            <li><img src="iconos/amor.png" alt="" width="15px" height="12px"><a>Like</a></li>
+            <li><img src="iconos/muchos.png" alt="" width="15px" height="12px"><a>Servicios</a></li>
+            <li><img src="iconos/logi.png" alt="" width="15px" height="12px"><a>Inicio</a></li>
         </ul>
     </nav>
+
+    <header>
+        <img src="iconos/logo.jpg" width="90px" height="90px">
+        <h1>Cuidemos el Planeta</h1>
+        <h2>Con nuestra vida</h2>
+
+
+        <nav>
+            <ul>
+                <li>INICIO | </li>
+                <li>BLOG | </li>
+                <li>CONTACTO | </li>
+            </ul>
+
+        </nav>
+
+
+    </header>
+    <h1><img src="iconos/portada.jpg" alt="" width="1305px" height="450px"="255px" /></h1>
+
+
+
 </body>
+
 
 </html>
