Modificaciones de index y diseño

--- a/Index.html
+++ b/Index.html
@@ -40,9 +40,31 @@
 
 
     </header>
-    <h1><img src="iconos/portada.jpg" alt="" width="1305px" height="450px"="255px" /></h1>
 
 
+    <h1>
+        <button class="btn"><img src="iconos/buscar.png" width="15px">   BUSCAR
+        </button>
+        <img src="iconos/portada.jpg" alt="" width="1305px" height="450px"="255px" />
+        <h3>
+            EL PLANETA ES LA RAZÓN DE VIDA DEL SER HUMANO
+            <br><br>
+            <div class=" buscar">
+                <input type="text" placeholder="BUSCAR" name="" id="">
+                <input type="button" value="Buscar" class="boto">
+                <h2>192.125.475.55</h2>
+
+            </div>
+
+        </h3>
+
+
+    </h1>
+    <br><br><br><br><br><br>
+    <footer>
+
+        <h1>KENNYA CLARISSA CASTRO GARCIA</h1>
+    </footer>
 
 </body>
 
